[gd_scene load_steps=5 format=3 uid="uid://daba4863wb8fu"]

[ext_resource type="Script" path="res://src/game/levels/HealthAndMoney.gd" id="1_kgeun"]
[ext_resource type="Texture2D" uid="uid://c45p5tvcf6p2d" path="res://assets/textures/money/Money.png" id="2_flb3g"]
[ext_resource type="FontFile" uid="uid://jd478um6wqpv" path="res://assets/fonts/Gameplay.ttf" id="3_7epsx"]
[ext_resource type="Script" path="res://src/ui/hud/wave_progress.gd" id="4_p26kv"]

[node name="UiLayer" type="CanvasLayer"]
offset = Vector2(10, 10)
transform = Transform2D(1, 0, 0, 1, 10, 10)

[node name="HealthAndMoney" type="VBoxContainer" parent="."]
offset_right = 160.0
offset_bottom = 60.0
script = ExtResource("1_kgeun")

[node name="HealthBar" type="ProgressBar" parent="HealthAndMoney"]
self_modulate = Color(0.298039, 0.854902, 0.25098, 1)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthAndMoney/HealthBar"]
layout_mode = 2
offset_left = -1.0
offset_top = 2.0
offset_right = 156.0
offset_bottom = 25.0
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyContainer" type="HBoxContainer" parent="HealthAndMoney"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="HealthAndMoney/MoneyContainer"]
layout_mode = 2
texture = ExtResource("2_flb3g")
expand_mode = 2

[node name="MoneyLabel" type="Label" parent="HealthAndMoney/MoneyContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_7epsx")
text = "MONEY"

[node name="WaveProgress" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_horizontal = 4
script = ExtResource("4_p26kv")

[node name="Wave" type="Label" parent="WaveProgress"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_7epsx")
text = "WAVE 1"
horizontal_alignment = 1

[node name="TimeLeft" type="Label" parent="WaveProgress"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_7epsx")
text = "20"
horizontal_alignment = 1
